--- a/myusbprint/src/main/AndroidManifest.xml
+++ b/myusbprint/src/main/AndroidManifest.xml
@@ -23,8 +23,22 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-feature android:name="android.hardware.usb.host" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <application >
+        <activity android:name="InitUSBActivity">
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_DETACHED" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_DETACHED"
+                android:resource="@xml/device_filter" />
+        </activity>
         <!--佳博打印服务-->
         <service
             android:name="com.gprinter.service.GpPrintService"
