--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,30 +14,44 @@ android {
         targetSdkVersion 25//Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
         versionCode 1//Integer.parseInt(project.ANDROID_BUILD_VERSION_CODE)
         versionName '1'//project.ANDROID_BUILD_VERSION_NAME
-	    multiDexEnabled true
+        multiDexEnabled true
     }
-
+    signingConfigs {//签名配置
+        release {//release&debug版签名配置
+            storeFile file('../hanchao.jks')//密钥文件路径
+            storePassword "hanchao2019"//密钥文件密码
+            keyAlias "hanchao"//key别名
+            keyPassword "hanchao2019"//key密码
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.release
+        }
+    }
     lintOptions {
         abortOnError false
     }
 
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDirs = ['libs']
         }
     }
 
 }
 
-repositories{
-    flatDir{
+repositories {
+    flatDir {
         dirs 'libs'
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:multidex:1.0.1'
     //5个模块
     compile project(':moduleDemo')
