--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,20 @@ task clean(type: Delete) {
 
 dependencies {
 }
+
+ext {
+    minSdkVersion = 16
+    targetSdkVersion = 26
+    compileSdkVersion = 28
+
+    supportLibraryVersion = '26.1.0'
+    constraintLayoutVersion = '1.1.3'
+    junitVersion = '4.12'
+    runnerVersion = '1.0.2'
+    espressoVersion = '3.0.2'
+    rxjavaVersion = '2.1.3'
+    rxandroidVersion = '2.0.1'
+    sqlbriteVersion = '2.0.0'
+    retrofitVersion = '2.3.0'
+
+}
