--- a/myusbprint/build.gradle
+++ b/myusbprint/build.gradle
@@ -22,9 +22,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided files('../app/libs/apiEngine v1.1.0.jar')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-v4:25.3.1'
+    compileOnly files('../app/libs/apiEngine v1.1.0.jar')
     //佳博打印SDK
     compile files('libs/gprintersdkv22.jar')
-//    compile 'com.google.zxing:core:3.4.0'
+    compile project(':print')
+    //    compile 'com.google.zxing:core:3.4.0'
 }
